[package]
name = "composed-view-context"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
console_error_panic_hook = "0.1"
log = "0.4.22"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
xilem_web = { path = "../.." }
