[package]
name = "fetch_event_handler"
version = "0.1.0"
publish = false
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.94"
console_error_panic_hook = "0.1"
console_log = "1"
futures = "0.3.31"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json", "serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
web-sys = { version = "0.3.76", features = ["Event", "HtmlInputElement"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
xilem_web = { path = "../.." }
